--- a/package.json
+++ b/package.json
@@ -61,11 +61,7 @@
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.9",
-    "zod": "^3.25.76",
-    "fs": "0.0.1-security",
-    "path": "0.12.7",
-    "ui-components": "0.1.5",
-    "icons": "1.0.0"
+    "zod": "^3.25.76"
   },
   "devDependencies": {
     "@types/node": "^22.18.1",
